force-app/main/default/objects/Challenge__c/Challenge__c.object-meta.xml
<CustomObject>
    <description>The specific task that a User would need to complete to get credit to be used for their overall score.</description>
    <label>Challenge</label>
    <nameField>
        <label>Challenge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>