force-app/main/default/objects/Challenge__c/fields/AssessmentType__c.field-meta.xml
<CustomField>
    <fullName>AssessmentType__c</fullName>
    <description>This is the kind of assessment it is. This is populated from Caliber.</description>
    <label>AssessmentType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>