force-app/main/default/objects/Challenge__c/fields/AssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDate__c</fullName>
    <description>This is the date the assessment was assigned. This field is populated from Caliber.</description>
    <label>AssignmentDate</label>
    <type>Date</type>
</CustomField>