force-app/main/default/objects/Challenge__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the batch that the assessment is associated with. This field is populated from Caliber.</description>
    <label>Batch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Challenges</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>