force-app/main/default/objects/Challenge__c/fields/CaliberID__c.field-meta.xml
<CustomField>
    <fullName>CaliberID__c</fullName>
    <description>This is the external CaliberID.</description>
    <externalId>true</externalId>
    <label>CaliberID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>