force-app/main/default/objects/Challenge__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details and Requirements for the challenge to be meet.</description>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>