force-app/main/default/objects/Challenge__c/fields/Stack__c.field-meta.xml
<CustomField>
    <fullName>Stack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the tech the challenge is about.</description>
    <label>Stack</label>
    <referenceTo>Stack__c</referenceTo>
    <relationshipLabel>Challenges</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>