force-app/main/default/objects/Challenge__c/fields/Sub_Tech__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sub tech in which this specific challenge will be associated to.</description>
    <label>Sub Tech</label>
    <referenceTo>Sub_Tech__c</referenceTo>
    <relationshipLabel>Challenges</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>