force-app/main/default/objects/Challenge__c/fields/WeekNumber__c.field-meta.xml
<CustomField>
    <fullName>WeekNumber__c</fullName>
    <description>This is the week of training the assessment was assigned to the batch. This is populated by Caliber.</description>
    <label>WeekNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>