force-app/main/default/objects/Challenge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Details__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Score__c</columns>
    <columns>Sub_Tech__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>