force-app/main/default/objects/Challenge__c/listViews/Testing.listView-meta.xml
<ListView>
    <fullName>Testing</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Testing</label>
</ListView>